--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,4 +26,11 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="match_parent"
+        android:layout_height="166dp"
+        app:srcCompat="@drawable/button_background" />
+
 </LinearLayout>
