--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
                     android:background="@drawable/border"
                     android:hint="Password"
                     android:inputType="textPassword"
+
                     android:maxLength="12"
                     android:padding="16dp"
                     android:textSize="16dp" />
@@ -84,8 +85,59 @@
                 android:id="@+id/layout3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_below="@id/layout2"
+
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/ac_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border"
+                    android:drawableRight="@drawable/ic_arrow_down"
+                    android:hint="Mothers"
+                    android:maxLength="12"
+                    android:padding="16dp"
+                    android:textSize="16dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/layout3"
                 android:gravity="center"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/signin"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/button_background"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="LOGIN"
+                    android:textColor="@color/background"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/signup"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/button_background"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="SIGN UP"
+                    android:textColor="@color/background"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
         </LinearLayout>
 
