--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="button">#2e7d32</color>
     <color name="background">#e8f5e9</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="textcolor">#2e7d32</color>
 
 
 
