signup activity linked done

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -118,6 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/button_background"
+                    android:fontFamily="casual"
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="LOGIN"
@@ -131,6 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/button_background"
+                    android:fontFamily="casual"
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="SIGN UP"
