--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -28,15 +28,17 @@
                     android:layout_height="100dp"
                     app:srcCompat="@drawable/icon_login" />
 
-                <Button
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:background="@color/background"
                     android:fontFamily="casual"
+                    android:gravity="center"
+                    android:paddingTop="5dp"
                     android:text="SIGN UP"
-                    android:textColor="@color/textcolor"
+                    android:textColor="@color/button"
+                    android:textSize="30sp"
                     android:textStyle="bold" />
+
             </LinearLayout>
 
 
@@ -70,7 +72,7 @@
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
                     android:hint="Cell"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:padding="16dp"
                     android:textColor="@color/textcolor"
                     android:textSize="16sp">
