--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/background</item>
+        <item name="colorPrimary">@color/button</item>
         <item name="colorPrimaryDark">@color/button</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
