--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,6 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <ImageView
@@ -108,6 +109,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
+                    android:drawableRight="@drawable/ic_arrow_down"
                     android:focusable="false"
                     android:hint="Location"
                     android:inputType="text"
@@ -123,6 +125,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
+                    android:drawableRight="@drawable/ic_arrow_down"
                     android:focusable="false"
                     android:hint="Gender"
                     android:inputType="text"
