update back button,arrow,and login focusable

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,8 @@
                     android:hint="Mothers"
                     android:maxLength="12"
                     android:padding="16dp"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    android:focusable="false"/>
             </LinearLayout>
 
             <LinearLayout
