--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,10 +33,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="casual"
                 android:gravity="center"
                 android:text="Login"
                 android:textColor="@color/button"
-                android:textSize="30sp" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/layout1"
@@ -51,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/border"
                     android:ems="10"
-                    android:hint="01XXXXXXXXX"
+                    android:hint="01900000000"
                     android:includeFontPadding="true"
                     android:inputType="number|textPersonName"
                     android:padding="16dp"
@@ -98,11 +100,11 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/border"
                     android:drawableRight="@drawable/ic_arrow_down"
-                    android:hint="Mothers"
+                    android:focusable="false"
+                    android:hint="Account Type"
                     android:maxLength="12"
                     android:padding="16dp"
-                    android:textSize="16dp"
-                    android:focusable="false"/>
+                    android:textSize="16dp" />
             </LinearLayout>
 
             <LinearLayout
