--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,16 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="textcolor">#2e7d32</color>
 
+    <color name="colorPrimary">#2BCC6F</color>
+    <color name="colorPrimaryDark">#2BCC6F</color>
+    <color name="colorAccentt">#333333</color>
+    <color name="colorprimarylight">#E9F8F1</color>
+    <color name="colorwhite">#FFFFFF</color>
+    <color name="colorbackground">#EBEBEB</color>
+    <color name="colortandringstart">#00B09B</color>
+    <color name="colortandringEnd">#96c93D</color>
+    <color name="colordevider">#D6D6D6</color>
+
 
 
 <!--    <color name="button">#2e7d32</color>-->
