--- a/app/src/main/res/layout/activity_mother_profile.xml
+++ b/app/src/main/res/layout/activity_mother_profile.xml
@@ -138,7 +138,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/signup"
+                    android:id="@+id/update_profile"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
 
