--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -82,7 +82,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
-                        app:cardCornerRadius="20dp">
+                        app:cardCornerRadius="20dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -116,7 +118,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
-                        app:cardCornerRadius="20dp">
+                        app:cardCornerRadius="20dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -160,7 +164,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
-                        app:cardCornerRadius="20dp">
+                        app:cardCornerRadius="20dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -197,7 +203,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
-                        app:cardCornerRadius="20dp">
+                        app:cardCornerRadius="20dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground">
 
                         <LinearLayout
                             android:layout_width="match_parent"
